# CV-to-OSC-converter

./: .clang-tidy  .gitignore  APP_BUNDLE_GUIDE.md  AudioDeviceManager.cpp  AudioDeviceManager.h  CHANGELOG.md  CLEANUP_REPORT.md  CMakeLists.txt  CV-to-OSC-Converter-v1.4.0.dmg  CVCalibrator.h  CVReader.cpp  CVReader.h  CVWriter.cpp  CVWriter.h  CommandLineInterface.cpp  CommandLineInterface.h  CommandSystem.h  Config.cpp  Config.h  DeviceManager.cpp  DeviceManager.h  Dockerfile  DragDropManager.cpp  DragDropManager.h  ErrorHandler.cpp  ErrorHandler.h  ExternalDeviceManager.cpp  FileDialog.h  FileDialog.mm  GUI_DESIGN_CUSTOMIZATION.md  GUI_GUIDE.md  GuiApplication.cpp  GuiApplication.h  GuiThemes.h  HOTKEYS_AND_UNDO.md  HotKeyEditor.h  ICON_SOLUTION.md  ICON_UPDATE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  (+59 more)
.Trash/: COMPLETED_FEATURES_REPORT.md  CV-to-OSC-Converter-1.5.0.dmg  CV-to-OSC-Converter-1.6.0.dmg  CV-to-OSC-Converter-1.7.0.dmg  IMPROVEMENTS_COMPLETED.md  RELEASE_NOTES_v1.4.0.md  UBUNTU_FIXES.md  Version.h.bak
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
assets/: AppIcon.icns  README.md  icon.icns
config/: Dockerfile.ubuntu-test  docker-compose.yml  multichannel_cv_osc_config.json
docs/: CHANGELOG.md  DISTRIBUTION_REPORT.md  DOCKER.md  ENHANCED_FEATURES.md  GUI_UPDATE_REPORT.md  ICON_PATH_UPDATE_REPORT.md  PROJECT_IMPROVEMENT_PLAN.md  PROJECT_REORGANIZATION_REPORT.md  README.md  fix_osc_device_switching.md
patches/: fix_osc_device_switching.patch
plugins/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleVST3.cpp
releases/v1.5.0/: CV-to-OSC-Converter-1.5.0.dmg  checksums.sha256  cv_to_osc_converter_v1.5.0_macos_arm64  test_osc_receiver_v1.5.0_macos_arm64
releases/v2.1.0/: CV-to-OSC-Converter-2.1.0.dmg
resources/: AppIcon.icns  Info.plist
scripts/: build_windows.bat  create_dmg.sh  create_icon.sh  create_macos_dist.sh  create_professional_dmg.sh  generate_icons.sh  launch_app_bundle.sh  launch_gui.sh  run_tests.sh  setup_gui_env.sh  update_all_icons.sh  version.sh
src/audio/: CVCalibrator.cpp  CVReader.cpp  CVReader.h  CVWriter.cpp  CVWriter.h
src/config/: CommonTypes.h  ConfigWatcher.h  Version.h  Version.h.bak
src/core/: AudioDeviceIntegration.cpp  AudioDeviceIntegration.h  AudioDeviceManager.cpp  AudioDeviceManager.h  Config.cpp  Config.h  DeviceManager.cpp  DeviceManager.h  OSCMixerEngine.cpp  OSCMixerEngine.h  OSCMixerTypes.h  PerformanceMonitor.cpp  PerformanceMonitor.h  RealAudioStream.cpp  RealAudioStream.h  SignalTypes.h
src/gui/: CommandSystem.cpp  DeviceConfigurationDialogs.h  DeviceConfigurationDialogs.mm  HotKeyManager.h  MacOSGui.mm  MacOSGui_old.mm  ProfessionalMixerWindow.h  ProfessionalMixerWindow.mm  ProfessionalOSCMixer.h  ProfessionalOSCMixer.mm  main_professional_osc_mixer.mm
src/osc/: OSCFormatManager.cpp  OSCFormatManager.h  OSCReceiver.cpp  OSCReceiver.h  OSCSecurity.h  OSCSender.cpp  OSCSender.h  OSCSenderEnhanced.cpp  OSCSenderEnhanced.h  OSCTCPTransport.cpp  OSCTCPTransport.h  OSCTransport.cpp  OSCTransport.h  OSCUDPTransport.cpp  OSCUDPTransport.h
src/platform/: MacOSPermissions.mm  MidiDeviceHandler.h  MidiDeviceHandler.mm
src/utils/: CommandLineInterface.cpp  ExternalDeviceManager.h  ExternalDeviceMapper.cpp  ExternalDeviceMapper.h  Localization.h  PluginManager.h  Transliterator.h  WiFiDeviceHandler.cpp  WiFiDeviceHandler.h
tests/: cv_osc_tests.cpp  simple_test.cpp  test_main.cpp  test_osc_components.cpp  test_osc_mixer_engine.cpp  test_osc_output_routing.cpp  test_osc_sender_enhanced.cpp
tests/unit/: test_localization  test_localization.cpp  test_osc_receiver.cpp  test_russian_display.cpp
